FlexDeploy 8.0/fdtlt82/FLEXDEPLOY-12131/objects/agf__ADM_Epic_Burndown_Item__c.object
<CustomObject>
    <fields>
        <fullName>agf__Closed__c</fullName>
        <label>Closed</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Compound_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <inlineHelpText>A compound key of Date-Work Id to guarantee each work record only has 1 entry per day</inlineHelpText>
        <label>Compound Key</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Epic__c</fullName>
        <label>Epic</label>
        <referenceTo>agf__ADM_Epic__c</referenceTo>
        <relationshipLabel>Epic Burndown Items</relationshipLabel>
        <relationshipName>Epic_Burndown_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>agf__Metric__c</fullName>
        <label>Metric</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Epic Burndown Item</label>
    <nameField>
        <displayFormat>EBI-{0000000000}</displayFormat>
        <label>Epic Burndown Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Epic Burndown Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>